Eyedropper of the Parent property can create bogus self-reference #83055

Closed
opened 2020-11-26 15:16:26 +01:00 by Stanislav Blinov · 6 comments

Relayed from BA .

Blender Version
Broken: 2.79b to 2.92 master
Worked: 2.78c

Short description of error

Using the eyedropper of the Parent property, if used on the same object, leads to creation of a custom property 'parent' on that object, with a reference to it. This can result in data that is never orphaned.

Exact steps for others to reproduce the error

In the default scene, select the cube, open Relations tab in properties, click the eyedropper on the Parent field and click on the cube. And error message will indicate 'Failed to set value'. However, user count for the object will increase to 2, and a custom property 'parent' will be created for the cube.

Relayed from [BA ](https://blenderartists.org/t/2-9-bug-on-objects-user-1/1267677/9). **Blender Version** Broken: 2.79b to 2.92 master Worked: 2.78c **Short description of error** Using the eyedropper of the Parent property, if used on the same object, leads to creation of a custom property 'parent' on that object, with a reference to it. This can result in data that is never orphaned. **Exact steps for others to reproduce the error** In the default scene, select the cube, open Relations tab in properties, click the eyedropper on the Parent field and click on the cube. And error message will indicate 'Failed to set value'. However, user count for the object will increase to 2, and a custom property 'parent' will be created for the cube.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Philipp Oeser self-assigned this 2020-11-26 15:25:35 +01:00
Philipp Oeser was unassigned by Stanislav Blinov 2020-11-26 15:26:35 +01:00

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

@lichtwerk sorry, that was unintentional. Looks like me editing the description removed you as assignee.

@lichtwerk sorry, that was unintentional. Looks like me editing the description removed you as assignee.
Philipp Oeser self-assigned this 2020-11-26 15:32:59 +01:00

This issue was referenced by 50e8072708

This issue was referenced by 50e8072708428a169f7049a2626c2392b7c4e202

This issue was referenced by 841ae18605

This issue was referenced by 841ae186056b11994d6d857b644f656bb5274ebc

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83055
There is no content yet.